# MyApp

TestApp/tmp/: indata.txt
TestApp_C++/: CMakeLists.txt  WatcherProgram
TestApp_C++/include/: watcher.hpp
TestApp_C++/src/: app.cpp  watcher.cpp
TestApp_C++/tmp/: indata.txt  outdata.txt
